Changed the structure.

--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Interactive Rating Component</title>
-		<link rel="stylsheet" href="style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body id="index-page">
 		<div class="container">
-			<div class="rating-card">
-				<div class="card-icon"><img src="images/icon-star.svg"></div>
+			<div class="card">
+				<div class="card-icon-container"><div class="card-icon-bg"><img src="images/icon-star.svg"></div></div>
 				<div class="card-title"><h3>How did we do?</h3></div>
 				<div class="card-description"><p>Please let us know how we did with your support request. All feedback is appreciated to help us improving our offering!</p></div>
 				<div class="card-score-container">
-					<form action="thanks.html" method="POST">
-						<label><input type="radio" name="rating">1</label>
-						<label><input type="radio" name="rating">2</label>
-						<label><input type="radio" name="rating">3</label>
-						<label><input type="radio" name="rating">4</label>
-						<label><input type="radio" name="rating">5</label>
-						<input type="submit" value="SUBMIT">
-					</form>
+					<button class="rating-score" id="1">1</button>
+					<button class="rating-score" id="2">2</button>
+					<button class="rating-score" id="3">3</button>
+					<button class="rating-score" id="4">4</button>
+					<button class="rating-score" id="5">5</button>
 				</div>
+				<div class="submit-container"><input class="submit-button" type="submit" value="SUBMIT"></div>
 			</div>
 		</div>
 	</body>
