--- a/thanks.html
+++ b/thanks.html
@@ -7,9 +7,9 @@
 	</head>
 	<body id="thanks-page">
 		<div class="container">
-			<div class="thanks-card">
+			<div class="card">
 				<div class="card-image"><img src="images/illustration-thank-you.svg"></div>
-				<div class="rating-log">You selected <span id="user-rating"></span> out of 5</div>
+				<div class="rating-log"><div>You selected <span id="user-rating"></span> out of 5</div></div>
 				<div class="card-title"><h3>Thank you!</h3></div>
 				<div class="card-description"><p>We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!</p></div>
 			</div>
