--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Interactive Rating Component</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="index.js"></script>
 	</head>
 	<body id="index-page">
 		<div class="container">
@@ -18,7 +19,7 @@
 					<button class="rating-score" id="4">4</button>
 					<button class="rating-score" id="5">5</button>
 				</div>
-				<div class="submit-container"><input class="submit-button" type="submit" value="SUBMIT"></div>
+				<div class="submit-container"><input class="submit-button" onclick="submit();" type="submit" value="SUBMIT"></div>
 			</div>
 		</div>
 	</body>
