--- a/thanks.html
+++ b/thanks.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Thank you!</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="index.js"></script>
 	</head>
 	<body id="thanks-page">
 		<div class="container">
